unofficial_components/roles/poc-llm-d-install-with-manifests/manifests/populated_manifests/scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/gateway: llm-d-inference-gateway
    llm-d.ai/epp: meta-llama-llama-3-2-3b-instruct-epp
  name: meta-llama-llama-3-2-3b-instruct-epp
  namespace: %test_namespace%
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/gateway: llm-d-inference-gateway
      llm-d.ai/epp: meta-llama-llama-3-2-3b-instruct-epp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/gateway: llm-d-inference-gateway
        llm-d.ai/epp: meta-llama-llama-3-2-3b-instruct-epp
    spec:
      containers:
      - args:
        - --poolName
        - meta-llama-llama-3-2-3b-instruct-inference-pool
        - --poolNamespace
        - %test_namespace%
        - -v
        - "4"
        - --zap-encoder
        - json
        - --grpcPort
        - "9002"
        - --grpcHealthPort
        - "9003"
        image: ghcr.io/llm-d/llm-d-inference-scheduler:0.0.4
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: envoy.service.ext_proc.v3.ExternalProcessor
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: epp
        ports:
        - containerPort: 9002
          name: grpc
          protocol: TCP
        - containerPort: 9003
          name: grpc-health
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: envoy.service.ext_proc.v3.ExternalProcessor
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 256m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: meta-llama-llama-3-2-3b-instruct-epp-sa
      serviceAccountName: meta-llama-llama-3-2-3b-instruct-epp-sa
      terminationGracePeriodSeconds: 30
