unofficial_components/roles/poc-llm-d-install-with-manifests/manifests/populated_manifests/scheduler/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/gateway: llm-d-inference-gateway
    llm-d.ai/epp: meta-llama-llama-3-2-3b-instruct-epp
  name: meta-llama-llama-3-2-3b-instruct-epp-service
  namespace: %test_namespace%
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - name: grpc
    port: 9002
    protocol: TCP
    targetPort: 9002
  - name: grpc-health
    port: 9003
    protocol: TCP
    targetPort: 9003
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/gateway: llm-d-inference-gateway
    llm-d.ai/epp: meta-llama-llama-3-2-3b-instruct-epp
  sessionAffinity: None
  type: NodePort
